--- a/client/src/pages/shop/index.css
+++ b/client/src/pages/shop/index.css
@@ -70,3 +70,10 @@
     background: #81D8D0 !important;
 }
 
+.add-item-err-mssg {
+    color: white;
+    background: red;
+    font-family: 'Lustria', serif;
+    padding: 2px;
+}
+
