notify user of cart clearance on page refresh/close

--- a/client/src/pages/shop/index.css
+++ b/client/src/pages/shop/index.css
@@ -78,3 +78,11 @@
     
 }
 
+#empty-cart-mssg
+{
+    font-family: 'Lustria', serif;
+    color: #3A3E40;
+    margin-top: 5px;
+    font-size: 12px;
+}
+
