add image lazy loading

--- a/client/src/pages/certificate/index.css
+++ b/client/src/pages/certificate/index.css
@@ -1,5 +1,8 @@
 .cert-image {
-    height: 600px;
+    content-visibility: auto;
+    aspect-ratio: 2.5/1;
+    background-color: #eee;
+    object-fit: fill;
 }
 
 .cert-header {
